<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.update.updateFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_buscar_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:hint="@string/buscar"
        android:text="@string/buscar"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="number"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidad"
        android:inputType="number"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/bt_actualizar_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/actualizar"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</LinearLayout>