<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    app:srcCompat="@drawable/deudores_morosos" />

                <TextView
                    android:id="@+id/tv_titulo"
                    android:layout_width="250dp"
                    android:layout_height="74dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/titulo"
                    android:textColor="@android:color/white"
                    android:textSize="27sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>
            //nombre

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <EditText
                    android:id="@+id/et_correo"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/correo2"
                    android:inputType="textEmailAddress"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_ciudades"
                android:layout_width="320dp"
                android:layout_height="35sp"
                android:layout_gravity="center"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="12sp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_ciudad_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/c_residencia"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/sp_lugar_naciminto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:entries="@array/ciudades" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <EditText
                    android:id="@+id/et_clave"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <EditText
                    android:id="@+id/et_repetir_clave"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:hint="@string/repetir_contrasena"
                    android:inputType="textPassword"
                    android:textSize="19sp"
                    tools:ignore="Autofill" />
            </LinearLayout>
            //contraseña


            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:background="?android:attr/colorActivatedHighlight"
                android:text="@string/guardar"
                android:textColor="@android:color/widget_edittext_dark"
                android:textSize="30sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_resultados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="12sp"
                android:layout_marginBottom="12sp"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>